prevent wrap in footer

--- a/app/components/footer/footer.styl
+++ b/app/components/footer/footer.styl
@@ -7,7 +7,6 @@
     padding 2.625rem 0
     justify-content space-evenly
     display flex
-    flex-wrap wrap
     align-items center
     .logo
       min-width 10%
